# posthog-cpp

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: posthog-config.cmake.in
examples/: CMakeLists.txt  basic.cpp  crash.cpp  logging.cpp
include/posthog/: crash_handler.h  logging.h  machine_id.h  posthog.h  stacktrace.h
scripts/: install-hooks.py  symbolize.py  update_version.py
scripts/hooks/: pre-commit
src/: posthog.cpp
tests/: CMakeLists.txt  README.md  basic.cpp  crash.cpp  test_internal_user.cpp  test_mac_id.cpp  unit_tests.cpp
